# MonaSynthLib

./: .gitignore  README.md  monasynth.cabal
DockerMonaSynthLib/: Dockerfile  HowToRun.txt  build_project.sh  setup_audio_stream.sh
DockerMonaSynthLib/monasynthlib/: monasynth.cabal
DockerMonaSynthLib/monasynthlib/MonaSynthTest/: MonaSynthTest.hs
DockerMonaSynthLib/monasynthlib/src/MonaSynthLib/: Filters.hs  Mixers.hs
MonaLLVSA/: monallvsa.hs
app/: MonaSynthLib.hs
app/MonaSynthLib/: Filters.hs  Mixers.hs  Multithreading.hs  Notes.hs  Play.hs
src/: MonaSynthLib.hs
src/MonaSynthLib/: Generators.hs  Notes.hs
